css/main.css
/* ... */
.club_header {
	display: flex;
	flex-direction: row;
	margin: 0 13%;
	justify-content: center;
	height: 150px;
}

.club_box {
	padding: 2.5% 1%;
	margin-top: 25px;
	margin-right: 2%;
	width: 96%;
	height: 100%;
	border: 1px solid rgb(182, 182, 182);
	border-radius: 5px;
}

.club_box .up {
	display: none;
	margin-left: 6%;
	margin-top: 1%;
}

.no_bold {
	font-weight: normal;
}

.active .up {
	display: block;
}
#history_popup {
	display: none;
}
h4.t_history {
  font-size: 25px;
  font-weight: 100;
}
#team_popup {
	display:  none;
}
.club_box .down {
	display: block;
}
.a_row {
	display: flex;
}
h3.sport_info_title {
  margin-top: 3%;
}
img.t_pictures3 {
    width: 27%;
}
img.t_pictures2 {
    width: 20%;
}
img.t_pictures4 {
    width: 42%;
    margin-bottom: 1%;
}
h5.team_details_text {
  font-weight: 100;
}
.a_row_2 {
	display: flex;
}
h6.t_members {
	padding-top: 2%;
	text-align: center;
}
.t_pictures {
    width: 100%;
}

div.team_members {
	display: grid;
    grid-template-columns: repeat(auto-fill, 300px);
}

div.team_member {
	width: auto;
	padding: 2.5% 5%;
	align-items: center;
}

.team_history_section {
  color: white;
  background-color: #ac191a;
  width: 67%;
  padding: 3%;
  position: fixed;
  top: 24%;
  left: 15%;
}
button.close_bt {
  position: absolute;
  top: 7%;
  left: 96%;
  color: black;
  font-size: 21px;
  border: none;
  background: transparent;
}
.active .down {
	display: none;
	display:  fixed;
}

svg.svg-inline--fa.fa-chevron-down.fa-w-14 {
	margin-left: 6%;
}

.club-links {
	margin-top: 30px;
}
.center_elements{
	justify-content: center;
}
button.web_link {
	white-space: nowrap;
	border: none;
	background-color: #ac191a;
	color: white;
	padding: 5% 7%;
}
button.page_link {
	white-space: nowrap;
    border: none;
    background-color: #ac191a;
    color: white;
    padding: 2% 6%;
    margin-right: 3%;
}
a.web_link , a.page_link {
	margin-top: 2%;
	margin-left: auto;
}
button.web_link_2{
	white-space: nowrap;
	border: none;
	background-color: #ac191a;
	color: white;
	padding: 2% 4%;
	margin-top: 2%;
	margin-right: 1%;
	margin-left:  12%;
}
.circles {
    margin-right: -12%;
}

.event-popup {
  position: fixed;
  bottom: 40px;
  left: 10%;
  right: 10%;
  width: 80%;
  height: 56px;
  border: none;
  border-radius: 12px;
  padding: 5% 4%;
  display: none;
  align-items: center;
  color: white;
  background-color: #0a1241;
  z-index: 2;
}

.event-popup-icon {
  width: 40px;
  height: 40px;
  position: absolute;
  left: 8px;
}

.event-popup-text {
  position: absolute;
  left: 56px;
  top: 0px;
}

.event-popup-close {
  position: absolute;
  right: 18px;
  top: 10px;
  font-size: 20px;
  cursor: pointer;
}

button.web_link:hover {
	background-color: #0A1241;
	animation-duration: 2s;
}

a.icons {
	width: 5%;
	margin-right: 2%;
	margin-top: 3%;
}

.lrn {
	margin-top: 20px;
	font-size: 1.8em;
}

.lrn_small {
	font-size: 1.5em;
}

.contents {
	font-family: var(--open-sans);
}

.together2 {
	margin-top: 12px;
	display: flex;
	align-items: center;
}

.together2 h6 {
	margin-bottom: 0;
}
.glue {
	display: flex;
}

.carousel_item {
	display: flex;
	justify-content: space-around;
}

.slide_show {
	color: grey;
	box-shadow: rgb(0 0 0 / 24%) 0px 3px 8px;
	padding: 3%;
	margin-bottom: 2%;
}
table th td {
	border:1px solid black;
}
.styled-table {
  border-collapse: collapse;
  margin: 25px 0;
  font-size: 0.9em;
  font-family: sans-serif;
  min-width: 100%;
  box-shadow: 0 0 20px rgba(0, 0, 0, 0.15);
}
.styled-table tbody tr {
    border-bottom: 1px solid #dddddd;
}

.styled-table tbody tr:nth-of-type(even) {
    background-color: #f3f3f3;
}

.styled-table tbody tr:last-of-type {
    border-bottom: 2px solid #009879;
}
.styled-table thead tr {
    background-color: #009879;
    color: #ffffff;
    text-align: left;
}
.styled-table thead {
	text-align:  center;
}
.styled-table tbody {
	text-align: left;
}
img.c_image {
	width: 180px;
	height: 180px;
	margin-bottom: 7%;
	object-fit: contain;
}
.s2 {
	display: none;
}
.c_item {
	height: 240px;
	width: 240px;
}

#search_button {
	color: lightblue;
	background-color: #0A1241;
}
a.art-form {
  background-color: #0a1241;
  color: white;
  padding: 1% 2%;
  border: none;
  border-radius: 33px;
  text-decoration: none;
}

#gallery {
   display: flex;
   max-width: 1200px;
   width: 100%;
   flex-direction: row;
   flex-wrap: wrap;
   margin: 10px auto 0;
   padding: 5px;
   align-items: center;
   justify-content: center;
}
#gallery .box {
	position: relative;
	width: 250px;
	height: 250px;
	margin: 10px;
	box-sizing: border-box;
	display: inline-block;
}
#gallery .box .img-box{
	position: relative;
	overflow: hidden;
}
#gallery .box .img-box img{
	max-width: 100%;
	transition: 1.5s ease;
	opacity: .2;
}

#gallery .box:hover .img-box img{
	transform: scale(1.2);
	opacity: 1;
}

#gallery .box .text{
  position: absolute;
  top: 10px;
  left: 10px;
  bottom: 10px;
  right: 10px;
  margin: auto;
  background: rgba(0, 0, 0, 0.5);
  transform: scaleY(0);
  align-items: center;
  justify-content: center;
  transition-duration: 0.6s;
}
#gallery .box:hover .text{
	transform: scaleY(1);
}

#gallery .box .text .content{
	color: white;
	position: absolute;
	margin: auto;
	text-align: center;
	padding: 5px;
	align-items: center;
	justify-content: center;
}

#gallery .box .text .content h1{
	margin: 0;
	padding: 0;
	font-size: 25px;
	font-weight: bold;
}
h2.a_title {
    margin-top: 9%;
	text-align: center;
	font-size: 2.5em;
}
#gallery .box .text .content p{
	margin: 0;
	padding: 0;
	font-size: 15px;
	font-weight: normal;
}

p.dscr {
  width: 18%;
  text-align: center;
  margin-top: 4%;
}
.box {
  position: absolute;
}
#search_button:hover {
	color: #0A1241;
	background-color: lightblue;
}

button.web_button {
	background-color: #0A1241;
	border: none;
	font-size: 100%;
	color: white;
	align-items: center;
	padding: 8px;
	transition: background-color 1s ease-out 100ms
}

button.web_button:hover {
	background-color: #3c7fcf;
}
/* ... */

